# strata-platform-control-views

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap-views.sh
views/: CMakeLists.txt
views/100V-ncp1034/: CMakeLists.txt  Control.qml  qml-views-100V-ncp1034.qrc
views/15A-switcher/: AdvancedControl.qml  BasicControl.qml  CMakeLists.txt  Control.qml  MultiplePlatform.qml  PlatformInterface.qml  qml-views-15A-switcher.qrc
views/1A-LED/: CMakeLists.txt  Control.qml
views/5A-switcher/: AdvancedControl.qml  BasicControl.qml  CMakeLists.txt  Control.qml  Diagnotics.qml  PlatformInterface.qml  SystemSettings.qml  Telemetry.qml  TimeAndWarningSettings.qml  qml-views-5A-switcher.qrc
views/5A-switcher-NCV6357/: AdvancedControl.qml  BasicControl.qml  CMakeLists.txt  Control.qml  Diagnotics.qml  PlatformInterface.qml  SystemSettings.qml  Telemetry.qml  TimeAndWarningSettings.qml  qml-views-5A-switcher.qrc
views/ACF-PSU/: CMakeLists.txt  Control.qml  qml-views-ACF-PSU.qrc
views/Adj-LDO/: CMakeLists.txt  Content.qml  Control.qml  PlatformInterface.qml  qml-views-Adj-LDO.qrc
views/Automotive-ADAS-Preregulator/: AdvancedControl.qml  BasicControl.qml  CMakeLists.txt  Control.qml  Diagnotics.qml  PlatformInterface.qml  SystemSettings.qml  Telemetry.qml  TimeAndWarningSettings.qml
views/FuelGauge-Monitor/: CMakeLists.txt  Control.qml
views/MDK-UCB/: AdvancedControl.qml  BasicControl.qml  CMakeLists.txt  Control.qml  ExportControl.qml  MultiButton.qml  MultiplePlatform.qml  PlatformInterface.qml  SaveDialogMenu.qml  SettingsControl.qml  SideBar.qml  qml-views-MDK-UCB.qrc
views/NCS32200/: BasicControl.qml  CMakeLists.txt  Control.qml  DebugMenu.qml  PlatformInterface.qml  SGBoardImage.qml  SGRotateImage.qml  SGTargetImage.qml  platformInterface.json  qml-views-NCS32200.qrc
views/Pixel/: CMakeLists.txt  Control.qml
views/SiC-SSDC-INV-UCB/: AdvancedControl.qml  BasicControl.qml  BurstTesting.qml  CMakeLists.txt  Control.qml  DoublePulseTesting.qml  ExportControl.qml  GeneralInputs.qml  MultiplePlatform.qml  PlatformInterface.qml  PulseControl.qml  SaveDialogMenu.qml  SettingsControl.qml  ShortCircuitMode.qml  SideBar.qml  SinglePulseTesting.qml  ValuesPulse.qml  qml-views-MDK-UCB.qrc  qml-views-SiC-SSDC-INV-UCB.qrc
views/XDFN-LDO/: AdvancedControl.qml  BasicControl.qml  CMakeLists.txt  Control.qml  MultiplePlatform.qml  PlatformInterface.qml
views/bldcMotorControl/: CMakeLists.txt  Control.qml  qml-views-bldcMotorConrol.qrc
views/core-test-ui/: CMakeLists.txt  Control.qml
views/current-sense/: CMakeLists.txt  Content.qml  Control.qml
views/dms-ir-led/: CMakeLists.txt  Control.qml  qml-views-dms-ir-led.qrc
views/dms-ir-led-rev3/: CMakeLists.txt  Control.qml  qml-views-dms-ir-led-rev3.qrc
views/eFuse/: CMakeLists.txt  Control.qml
views/ecoSWITCH/: CMakeLists.txt  Control.qml  PlatformInterface.qml  qml-views-eco-switch.qrc
views/fan6500xx/: CMakeLists.txt  Control.qml
views/hello-strata/: CMakeLists.txt  Control.qml  HelloStrataControl.qml  HelloStrataControl_TabView.qml  PlatformInterface.qml
views/hello-strata-rsl10/: CMakeLists.txt  Control.qml  HelloStrataControl.qml  HelloStrataControl_TabView.qml  PlatformInterface.qml
views/ldo-cp/: CMakeLists.txt  Control.qml
views/led/: CMakeLists.txt  Control.qml  PlatformInterface.qml  qml-views-led.qrc
views/led-tail-light/: CMakeLists.txt  Control.qml
views/level-translators/: CMakeLists.txt  Control.qml
views/lighting-kit-demo/: CMakeLists.txt  Control.qml  DebugMenu.qml  PlatformInterface.qml  platformInterface.json  qml-views-lighting-kit-demo.qrc
views/logic-gate/: CMakeLists.txt  Control.qml  PartOne.qml  PartTwo.qml  PlatformInterface.qml
views/meshNetwork/: CMakeLists.txt  Control.qml
views/motor-template/: CMakeLists.txt  Control.qml  qml-views-motor-template.qrc
views/motor-vortex/: AdvancedControl.qml  BasicControl.qml  CMakeLists.txt  Control.qml  FAEControl.qml  PlatformInterface.qml  qml-views-motor-vortex.qrc
views/motorController/: CMakeLists.txt  Control.qml  qml-views-motorController.qrc
views/mv-mdk/: Basic.qml  CMakeLists.txt  Control.qml  ControlsParameters.qml  DebugMenu.qml  PlatformInterface.qml  Warning.qml  notes.txt  platform.py  platformInterface.json  qml-views-mv-mdk.qrc
views/ncs32100/: BasicControl.qml  CMakeLists.txt  Control.qml  PlatformInterface.qml  (+2 more)
(+807 files in other folders)
